@@ -1,8 +1,9 @@
 Revision history for XML::Genx.
 
 0.04  Tue Nov 30 23:14:44 GMT 2004
+	- Fix up the docs to mention AddAttributeLiteral().
 	- Make the namespace parameter in StartElementLiteral()
-	  optional.
+	  optional.  Ditto for AddAttributeLiteral().
 
 0.03  Tue Nov 30 13:44:28 GMT 2004
 	- Everything now dies by default instead of returning a status
